--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,8 @@ services:
       - "4000:4000"
     volumes:
       - ./server:/server
-    environment:
-      - PORT=${PORT}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DATABASE=${DATABASE}
+    env_file:
+      - .env
     depends_on:
       - mongo
 
