--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -12,7 +12,7 @@
     },
 
     /* Bundler mode */
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
