fix: date format fixed

--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
+    "advancedFormat": "link:dayjs/plugin/advancedFormat",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "lucide-react": "^0.474.0",
