--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
